# patina

./: .gitignore  .markdownlint.json  0000-uefi-services-component.md  Cargo.toml  Makefile.toml  README.md  cspell.yml  default_14082709219874169059_0_33824.profraw  deny.toml  rust-toolchain.toml  tarpaulin-report.html
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: documentation_request.yml  rustc_feature_gate.yml  unstable_feature.yml
.github/actions/rust-tool-cache/: action.yml
.github/workflows/: CiWorkflow.yml  Labeler.yml  ReleaseWorkflow.yml  ci-workflow.yml  label-issues.yml  publish-mdbook.yml  test-pr.yml
.github/workflows/label-issues/: regex-pull-requests.yml
adv_logger/: Cargo.toml
adv_logger/src/: component.rs  integration_test.rs  lib.rs  logger.rs  memory_log.rs  parser.rs  protocol.rs
components/acpi/: Cargo.toml
components/acpi/src/: acpi.rs  acpi_protocol.rs  component.rs  integration_test.rs  lib.rs  service.rs
components/patina_acpi/: Cargo.toml
components/patina_acpi/src/: acpi.rs  acpi_protocol.rs  acpi_table.rs  aml.rs  component.rs  error.rs  integration_test.rs  lib.rs  opcode.rs  service.rs  signature.rs
components/patina_adv_logger/: Cargo.toml
components/patina_adv_logger/src/: component.rs  integration_test.rs  logger.rs  memory_log.rs
components/patina_mm/: Cargo.toml
components/patina_mm/src/: config.rs
components/patina_mm/tests/: README.md
components/patina_performance/: Cargo.toml
components/patina_performance/src/: _smm.rs  config.rs  firmware_performance.rs  lib.rs  mm.rs  perf_timer.rs  performance_table.rs
components/patina_smbios/: Cargo.toml
components/patina_smbios/examples/: vendor_oem.rs
components/patina_smbios/patina_smbios_macro/: Cargo.toml
components/patina_smbios/patina_smbios_macro/src/: lib.rs
components/patina_smbios/src/: component.rs  lib.rs  smbios.rs  smbios_derive.rs  smbios_record.rs
components/patina_smbios/tests/: vendor_oem.rs
components/patina_smbios_macro/: Cargo.toml
components/patina_smbios_macro/src/: lib.rs
components/patina_smbios_vendor_example/: Cargo.toml
components/patina_smbios_vendor_example/src/: main.rs
components/patina_smbios_vendor_example/tests/: add_vendor_record.rs
components/patina_status_code/: Cargo.toml
components/patina_status_code/src/: callback.rs  component.rs  error.rs  lib.rs  protocol.rs  service.rs  status_code.rs
components/patina_variable/: Cargo.toml
components/patina_variable/src/: component.rs  error.rs  lib.rs  service.rs  variable.rs
components/performance/: Cargo.toml
components/performance/src/: error.rs  lib.rs  log_perf_measurement.rs  performance_record.rs  performance_table.rs
core/dxe_core/src/: event_db.rs
core/patina_debugger/src/: debugger.rs  lib.rs  system.rs
core/patina_internal_collections/benches/: bench_add.rs  bench_delete.rs  bench_search.rs
core/patina_internal_collections/src/: node.rs  rbt.rs
core/patina_internal_performance/: Cargo.toml
core/patina_internal_test_logger/: Cargo.toml
crates/temp_verification/: Cargo.toml
crates/temp_verification/src/: bump_allocator.rs  fv_verify.rs  hob_verify.rs  lib.rs  primitive_logger.rs  verification.rs
crates/uefi_allocator/: Cargo.toml
crates/uefi_allocator/src/: fixed_size_block_allocator.rs  uefi_allocator.rs
crates/uefi_collections/: Cargo.toml
crates/uefi_component_interface/: Cargo.toml
crates/uefi_cpu/: Cargo.toml
crates/uefi_cpu/src/: aarch64.rs  lib.rs  null.rs
crates/uefi_cpu/src/aarch64/: cpu.rs  hw_interrupt.rs
crates/uefi_cpu/src/x64/: cpu.rs
crates/uefi_cpu_init/: Cargo.toml
crates/uefi_depex/: Cargo.toml
crates/uefi_depex/src/: lib.rs
crates/uefi_device_path/: Cargo.toml
crates/uefi_event/: Cargo.toml
crates/uefi_event/src/: lib.rs
crates/uefi_gcd/: Cargo.toml
crates/uefi_interrupt/: Cargo.toml
crates/uefi_performance/: Cargo.toml
crates/uefi_test_macro/: Cargo.toml
crates/uefi_tpl_lock/: Cargo.toml
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md  patina.md  rfc_lifecycle.md
dxe_core/: Cargo.toml
dxe_core/src/: allocator.rs  boot_services.rs  component_interface.rs  cpu_arch_protocol.rs  debug_image_info_table.rs  dispatcher.rs  driver_services.rs  dxe_services.rs  event_db.rs  events.rs  filesystems.rs  fv.rs  gcd.rs  hw_interrupt_protocol.rs  image.rs  lib.rs  memory_attributes_table.rs  misc_boot_services.rs  protocol_db.rs  protocols.rs  runtime.rs  test_support.rs  tpl_lock.rs  uefi_allocator.rs  uefi_gcd.rs  verification.rs
dxe_core/src/allocator/: fixed_size_block_allocator.rs
dxe_core/src/boot_services/: driver.rs  events.rs  image.rs  misc.rs  protocols.rs
dxe_core/src/gcd/: memory_block.rs  spin_locked_gcd.rs
dxe_core/src/uefi_allocator/: fixed_size_block_allocator.rs  uefi_allocator.rs
dxe_core/src/uefi_gcd/: gcd.rs
nuget_publishing/: README.md  debug_aarch64_config.yaml  debug_x64_config.yaml  release_aarch64_config.yaml  release_x64_config.yaml
patina_dxe_core/: Cargo.toml
patina_dxe_core/examples/: std.rs
patina_dxe_core/src/: allocator.rs  config_tables.rs  cpu_arch_protocol.rs  decompress.rs  dispatcher.rs  driver_services.rs  dxe_services.rs  event_db.rs  events.rs  fv.rs  gcd.rs  hw_interrupt_protocol.rs  image.rs  lib.rs  memory_attributes_protocol.rs  memory_manager.rs  misc_boot_services.rs  pecoff.rs  protocol_db.rs  protocols.rs  runtime.rs  systemtables.rs  test_support.rs  tpl_lock.rs
sample_components/: Cargo.toml
sample_components/src/: hello.rs  hello_world.rs  lib.rs
sdk/patina_ffs/: Cargo.toml
sdk/patina_ffs/src/: file.rs  lib.rs  section.rs  volume.rs
sdk/patina_ffs/test_resources/: DXEFV_expected_values.yml
sdk/patina_ffs_extractors/: Cargo.toml
sdk/patina_sdk/: Cargo.toml
sdk/patina_sdk_macro/: Cargo.toml
supply-chain/: config.toml
uefi_test/: Cargo.toml
uefi_test/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: all.rs  build_aarch64.rs  build_x64.rs  check.rs  clippy.rs  coverage.rs  cspell.rs  deny.rs  docs.rs  format.rs  help.rs  main.rs  setup.rs  test.rs  util.rs
(+184 files in other folders)
