[package]
name = "patina_acpi"
resolver = "2"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
description = "UEFI ACPI servicves that provide common types and functionality used in ACPI development."

[dependencies]
downcast-rs = { workspace = true }
memoffset = { workspace = true }
mockall = { workspace = true, optional = true }
patina_boot_services = { workspace = true }
patina_sdk = { workspace = true }
r-efi = { workspace = true }
scroll = { workspace = true }
spin = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }

[features]
alloc = []
mockall = ["dep:mockall"]
