[package]
name = "patina_smbios"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
log = { workspace = true }
patina_sdk = { workspace = true }
r-efi = { workspace = true }
spin = { workspace = true }
hashbrown = "0.11.2"
patina_smbios_macro = { path = "patina_smbios_macro" }

[features]
enable_patina_tests = []
