[package]
name = "patina_smbios"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true
description = "System Management BIOS (SMBIOS) support for UEFI components."

[dependencies]
log = { workspace = true }
patina_sdk = { workspace = true }
r-efi = { workspace = true }
spin = { workspace = true }
hashbrown = "0.11.2"

[features]
enable_patina_tests = []
