[package]
name = "patina_status_code"
resolver = "2"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
description = "Performance support for the DXE Core."

[dependencies]
r-efi = { workspace = true }

[dev-dependencies]