[package]
name = "patina_variable"
resolver = "2"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
description = "Variable service support for the DXE Core."

[dependencies]
r-efi = { workspace = true }
patina_sdk = { workspace = true }