[package]
name = "platform_verification"
resolver = "2"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
description = "Platform verification tool, probably needs to be moved."

[lib]
name = "platform_verification"
path = "src/lib.rs"

[dependencies]
r-efi = { workspace = true }
mu_pi = { workspace = true }
log = { workspace=true }
uefi_sdk = { version = "2" }


