[package]
name = "uefi_allocator"
version = "0.1.0"
edition = "2021"

[lib]
name = "uefi_allocator"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi_gcd = {workspace=true}
linked_list_allocator = {workspace=true}
mu_pi = {workspace=true}
r-efi = {workspace=true}
uefi_tpl_lock = {workspace=true}
