[package]
name = "uefi_cpu"
version = "0.2.0"
edition = "2021"

[package.metadata.docs.rs]
features = ["doc", "std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "uefi_cpu"
path = "src/lib.rs"

[dependencies]
lazy_static = { workspace = true }
log = { workspace = true }
uefi_core = { workspace = true }
x86_64 = { workspace = true, optional = true }
uefi_interrupt = { workspace = true }

[target.'cfg(all(target_os="uefi", target_arch="x86_64"))'.dependencies]
x86_64 = { workspace = true }

[dev-dependencies]
x86_64 = { workspace = true }

[target.'cfg(all(target_os="uefi", target_arch="aarch64"))'.dependencies]
r-efi = { workspace = true }
alloc-no-stdlib = { version = "~2.0", optional = true}

[features]
default = []
std = []
doc = ["x86_64"]
