[package]
name = "uefi_depex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "uefi_depex"
path = "src/lib.rs"

[dependencies]
r-efi = {workspace=true}
uuid = {workspace=true}
uefi_protocol_db = {workspace=true}
log = { workspace = true }
